Setup email from browser

--- a/MarketingServer/UltimateBodyTransformationEmail.html
+++ b/MarketingServer/UltimateBodyTransformationEmail.html
@@ -34,12 +34,12 @@
                                </tr>
                                <tr>
                                    <td style="padding-top: 10px">
-                                       Also, be sure to visit your <a href="http://www.somethingwickedrocks.com" style="color: #c5ce5b; font-style: italic">email preferences</a> so you can customize how your email content is sent.
+                                       Also, be sure to visit your <a href="http://localhost:4200/preferences?cid={2}" style="color: #c5ce5b; font-style: italic">email preferences</a> so you can customize how your email content is sent.
                                    </td>
                                </tr>
                                <tr>
                                    <td>
-                                       <a href="http://www.somethingwickedrocks.com" style="text-decoration: none; display: block; width: 300px; background: #708434; height: 50px; margin: auto; margin-top:20px;text-align: center; line-height: 50px; font-size: 24px; color: #e8e8e8; border-radius: 5px">Download</a>
+                                       <a href="http://localhost:49699/Downloads/UltimateBodyTransformation.pdf" style="text-decoration: none; display: block; width: 300px; background: #708434; height: 50px; margin: auto; margin-top:20px;text-align: center; line-height: 50px; font-size: 24px; color: #e8e8e8; border-radius: 5px">Download</a>
                                    </td>
                                </tr>
                            </table>
@@ -61,19 +61,19 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        <a href="http://www.somethingwickedrocks.com"><img src="http://localhost:49699/images/fb.png" style="width: 25px; height: 25px; margin: 0 5px 0 5px" /></a>
-                                        <a href="http://www.somethingwickedrocks.com"><img src="http://localhost:49699/images/twitter.png" style="width: 25px; height: 25px; margin: 0 5px 0 5px" /></a>
+                                        <a href="http://www.facebook.com"><img src="http://localhost:49699/images/fb.png" style="width: 25px; height: 25px; margin: 0 5px 0 5px" /></a>
+                                        <a href="http://www.twitter.com"><img src="http://localhost:49699/images/twitter.png" style="width: 25px; height: 25px; margin: 0 5px 0 5px" /></a>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td style="color: #e2e2e2; padding-bottom: 20px">
-                                        <a style="padding: 0 5px 0 5px; color: #16a6bf" href="http://www.somethingwickedrocks.com">Contact us</a> |
-                                        Manage your <a href="http://www.somethingwickedrocks.com" style="color: #16a6bf">email preferences</a>
+                                        <a style="padding: 0 5px 0 5px; color: #16a6bf" href="http://localhost:4200/contact">Contact us</a> |
+                                        Manage your <a href="http://localhost:4200/preferences?cid={2}" style="color: #16a6bf">email preferences</a>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td style="color: #e2e2e2; padding-bottom: 20px; font-size: 12px">
-                                        Trouble viewing this email? <a style="color: #16a6bf" href="http://www.somethingwickedrocks.com">Click here</a>
+                                        Trouble viewing this email? <a style="color: #16a6bf" href="http://localhost:4200/mail?eid={1}&cid={2}">Click here</a>
                                     </td>
                                 </tr>
                             </table>
